[package]
name = "lighthouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
lightning-block-sync = { version = "0.0.105", features = [ "rpc-client" ] }

base64 = "0.13.0"

tokio = { version = "1.17.0", features = ["full"] }

