[package]
name = "lighthouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
lightning-block-sync = { version = "0.0.105", features = [ "rpc-client" ] }
lightning-net-tokio = "0.0.105"
lightning-persister = "0.0.105"
lightning = "0.0.105"

base64 = "0.13.0"
rand = "0.8.5"
chrono = "0.4.19"

tokio = { version = "1.17.0", features = ["full"] }
serde_json = "1.0.79"

